--- a/index.html
+++ b/index.html
@@ -20,21 +20,22 @@
         </div>
         <nav class="navbar navbar-light bg-light mt-5">
             <form class="form-inline">
-                <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+                <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search"
+                    oninput="searchBooks(this.value)">
                 <button id="searchBtn" class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
             </form>
         </nav>
         <div class="container">
             <div class="row">
                 <div class="col-9">
-                    <div class="row">
+                    <div id="bookDisplayRow" class="row">
 
                     </div>
                 </div>
                 <div class="col-3">
                     <ul class="list-group mt-5">
                         <h5>Your basket <i class="bi bi-cart3"></i></h5>
-                        <div class="text-dark rounded cart-container">
+                        <div id="cartList" class="text-dark rounded cart-container">
                             <li class="list-group-item">Your basket is empty! <i class="bi bi-emoji-frown"></i></li>
                         </div>
                         <button type="button" id="deleteAllBtn" class="btn btn-sm btn-danger d-none">empty
@@ -75,7 +76,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns"
         crossorigin="anonymous"></script>
-    <script src="index.js"></script>
+    <script src="app.js"></script>
+    <!-- <script src="index.js"></script> -->
 </body>
 
 </html>
